# Foldify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
FileOrganizer - Demo - Youness Berkia/: README.md  demo-youness.yaml
FileOrganizer - Demo - Youness Berkia/.demo_home/.config/file-organizer/profiles/: demo-youness.yaml
FileOrganizer - Demo - Youness Berkia/Banking/: bankstatement_2026-01.docx
FileOrganizer - Demo - Youness Berkia/Contracts/: contract_NDA_June.docx
FileOrganizer - Demo - Youness Berkia/Insurance/: document_04.docx
FileOrganizer - Demo - Youness Berkia/Personal/: passport_A1234567.docx
FileOrganizer - Demo - Youness Berkia/School/: document_01.docx
FileOrganizer - Demo - Youness Berkia/Tax Returns/: document_02.docx
FileOrganizer - Demo - Youness Berkia/Travel/: document_05.docx
FileOrganizer - Demo - Youness Berkia/Work/: memo_project_update.docx
FileOrganizer - Demo - Youness Berkia/incoming/: bankstatement_2026-01.docx  contract_NDA_June.docx  document_01.docx  document_02.docx  document_03.docx  document_04.docx  document_05.docx  invoice_INV-1001.docx  memo_project_update.docx  passport_A1234567.docx
docs/: CONFIGURATION.md  README.md  TROUBLESHOOTING.md
examples/: README.md  ai-smart.yaml.example  desktop-cleanup.yaml.example  school.yaml.example  work.yaml.example
src/file_organizer/: __init__.py  cli.py
src/file_organizer/ai/: client.py
src/file_organizer/config/: __init__.py  loader.py  models.py  validator.py
src/file_organizer/core/: __init__.py  executor.py  organizer.py  scanner.py
src/file_organizer/rules/: __init__.py  engine.py
src/file_organizer/utils/: helpers.py
src/foldify/: __init__.py  cli.py
src/foldify/ai/: __init__.py  client.py
src/foldify/config/: loader.py  models.py  validator.py
src/foldify/core/: __init__.py  executor.py  organizer.py  scanner.py
src/foldify/rules/: engine.py
src/foldify/utils/: __init__.py  helpers.py
tests/: README.md  conftest.py
tests/integration/: test_cli_commands.py  test_organize_workflow.py
tests/unit/: __init__.py  test_config_loader.py  test_config_models.py  test_config_validator.py  test_core_executor.py  test_core_scanner.py  test_rules_engine.py
