[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "0.1.0"
description = "An intelligent file organization tool with AI-powered classification"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Youness Berkia", email = "berkiayouness@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
keywords = ["file", "organizer", "ai", "ollama", "automation", "cli"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "ollama>=0.1.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.2.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
file-organizer = "file_organizer.cli:main"

[project.urls]
Homepage = "https://github.com/YounesBerkia/Local-AI-Folder-Organizer"
Repository = "https://github.com/YounesBerkia/Local-AI-Folder-Organizer"
Issues = "https://github.com/YounesBerkia/Local-AI-Folder-Organizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
file_organizer = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=file_organizer --cov-report=term-missing"
